--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
    <div class="footer">
       <h3>footer</h3>
       <i class="fa-solid fa-phone"></i>
-      <h4>653758357</h4><br>
+      <h4>9392848259</h4><br>
       <i class="fa-brands fa-telegram"></i>
-      <h4>name@gmail.com</h4>
+      <h4>xplotasofttechnologyes@gmail.com</h4>
    </div>
 <script>
 
